refactor: minor